--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,23 +22,20 @@ jobs:
         with:
           release-type: node
           manifest-file: .release-please-manifest.json
-        if: github.head_ref != 'release-please--branches--master'
 
-      # Step 3: Setup node if a release is created
+      # Step 3: Publish to npm if a release is created
       - uses: actions/setup-node@v4
         with:
           node-version: 22.x
           registry-url: 'https://registry.npmjs.org'
-        if: github.head_ref == 'release-please--branches--master'
+        if: ${{ steps.release.outputs.release_created }}
 
-      # Step 4: Install Packages if a release is created
       - name: Install dependencies
         run: npm ci
-        if: github.head_ref == 'release-please--branches--master'
+        if: ${{ steps.release.outputs.release_created }}
 
-      # Step 5: Publish package if a release is created
       - name: Publish to npm
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        if: github.head_ref == 'release-please--branches--master'
+        if: ${{ steps.release.outputs.release_created }}
