--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "yarn build",
     "test": "jest",
     "lint": "eslint",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
     "prepublish": "yarn lint & yarn test && yarn build"
   },
   "keywords": [
@@ -43,6 +44,7 @@
     "@types/lodash.isequal": "^4.5.8",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
