--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "prepare": "yarn build",
     "test": "jest",
     "lint": "eslint",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
-    "prepublish": "yarn lint & yarn test && yarn build"
+    "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s",
+    "create-tag": "node -e \"process.stdout.write(require('./package.json').version)\" | xargs -I {} git tag -a v{} -m \"Release v{}\"",
+    "release": "yarn changelog && yarn create-tag && git push origin --tags",
+    "prepublish": "yarn lint && yarn test && yarn build"
   },
   "keywords": [
     "react",
