--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dist"
   ],
   "scripts": {
+    "prebuild": "rm -rf dist && yarn remove react react-dom @types/react-dom",
     "build": "tsc",
+    "postbuild": "yarn add -D react@^18.2.0 react-dom@^18.2.0 @types/react-dom@^18.0.11 --ignore-scripts",
     "prepare": "yarn build",
     "test": "jest",
     "lint": "eslint",
@@ -31,9 +33,11 @@
   },
   "author": "Alireza Kasaaian",
   "license": "MIT",
+  "peerDependencies": {
+    "@types/react": ">=17.0.0"
+  },
   "dependencies": {
-    "lodash.isequal": "^4.5.0",
-    "react": "^18.0.0"
+    "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.9",
@@ -55,10 +59,11 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^4.0.0",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.19.1"
   }
 }
